<resources>
    <string name="app_name" translatable="false">Husk</string>
    <string name="github" translatable="false">Github</string>
    <string name="lock_layout_description" translatable="false">lock layout description to be used a unique id to lock screen</string>
    <string name="day_battery" formatted="false" translatable="false">%s, %d%%</string>
    <string name="tag_0" translatable="false">0</string>
    <string name="tag_1" translatable="false">1</string>
    <string name="tag_2" translatable="false">2</string>
    <string name="tag_3" translatable="false">3</string>
    <string name="tag_4" translatable="false">4</string>
    <string name="tag_5" translatable="false">5</string>
    <string name="tag_6" translatable="false">6</string>
    <string name="tag_7" translatable="false">7</string>
    <string name="tag_8" translatable="false">8</string>
    <string name="time_spent_min" translatable="false"><b>%1$sm</b></string>
    <string name="time_spent_hour" translatable="false">%1$sh %2$sm</string>
    <string name="app">App</string>
    <string name="set_as_default_launcher">Set as default launcher</string>
    <string name="set_as_default_launcher_u"><u>Set as default launcher</u></string>
    <string name="set_as_default_launcher_first">Set Husk default first</string>
    <string name="app_text_color">Text color</string>
    <string name="background">Background</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="color">Color</string>
    <string name="gradient">Gradient</string>
    <string name="image">Image</string>
    <string name="tap_again_for_next">Tap again for the next one</string>
    <string name="unable_to_load_image">Unable to load that image</string>
    <string name="double_tap_to_lock_screen">Double tap to lock</string>
    <string name="home_button_show_recents">Home button for recents</string>
    <string name="admin_permission_message">Husk promises to use the accessibility permission responsibly. Husk does not collect or share any data.</string>
    <string name="about">About</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="change_default_launcher">Change default launcher</string>
    <string name="privacy">Privacy</string>
    <string name="recommended">More</string>
    <string name="also_by">Also from munjed-ab</string>
    <string name="letsgo_name" translatable="false">letsgo</string>
    <string name="letsgo_description">Sync music across every device on your Wi-Fi. No internet, no cloud, no accounts.</string>
    <string name="smartshots_name" translatable="false">smartshots</string>
    <string name="smartshots_description">Make your screenshots searchable.</string>
    <string name="email">Email</string>
    <string name="swipe_up_for_apps">1. Swipe up for all apps\n2. Long press anywhere for settings</string>
    <string name="apps_on_home_screen">Apps on home screen</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="center">Center</string>
    <string name="home_layout_alignment">App alignment</string>
    <string name="swipe_left_app">Swipe left app</string>
    <string name="swipe_right_app">Swipe right app</string>
    <string name="music_app">Music app</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="app_drawer_tips">Tip: Start typing an app name to auto-launch it</string>
    <string name="okay">Okay</string>
    <string name="cool">Cool!</string>
    <string name="auto_show_keyboard">Auto show keyboard</string>
    <string name="hide">Hide</string>
    <string name="status_bar">Status bar on top</string>
    <string name="rename">Rename</string>
    <string name="show_date_time">Show date time</string>
    <string name="appearance">Appearance</string>
    <string name="gestures">Gestures</string>
    <string name="theme_mode">Theme mode</string>
    <string name="system_default">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="font">Font</string>
    <string name="font_pixel">Pixel</string>
    <string name="font_sans">Modern</string>
    <string name="font_serif">Classic</string>
    <string name="font_handwritten">Handwritten</string>
    <string name="welcome_to_settings">Welcome to the settings!
        \n\nRemember, if you have any questions, our About page has the answer.</string>
    <string name="keyboard_message">Hi, keyboard is the fastest way to find and launch apps in Husk. Can we request you to keep this On for a few more days and then decide?
        \n\nThe choice is always yours.</string>
    <string name="digital_wellbeing_message">If you want to set time limits for certain apps, Digital Wellbeing feature of Android can help you do it.           Please search for Digital Wellbeing in your phone settings and enable it.</string>
    <string name="app_usage_message">To show/hide your screen time on the home screen, please allow or disallow the app usage permission.
        \n\nNote: No app usage data is collected. Everything is processed on your device.</string>
    <string name="accessibility_service_description">The accessibility permission is required to enable the gesture - double tap to lock . Any data acquired by Husk via this service will not leave your device.</string>
    <string name="open">Open link</string>
    <string name="copy">Copy</string>
    <string name="close">Close</string>
    <string name="not_now">Not now</string>
    <string name="date">Date</string>
    <string name="date_only">Date only</string>
    <string name="bottom_on">Bottom: On</string>
    <string name="bottom_off">Bottom: Off</string>
    <string name="please_set_husk_as_default_first">Please set Husk as default first</string>
    <string name="tip_start_typing_for_rename">Tip: Start typing for app RENAME option</string>
    <string name="hidden_apps_message">Note: Tap on \'Husk\' at the top of this Settings page to find your hidden apps.\n\nMore details available in our About page.</string>
    <string name="swipe_down_for">Swipe down for</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="notification_line">Notification line</string>
    <string name="clear_all">clear all</string>
    <string name="nothing_new">nothing new</string>
    <plurals name="notify_line">
        <item quantity="one">%d new</item>
        <item quantity="other">%d new</item>
    </plurals>
    <string name="accessibility_disclosure">Please turn on Husk\'s accessibility service in your device\'s settings to enable Double tap to lock gesture.
    \n\nPlease note that this service is only used for this particular feature. Our accessibility service does not collect or share any data.</string>
    <string name="accept">Accept</string>
    <string name="permission">Permission</string>
    <string name="double_tap_lock">Double tap to lock</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="not_working"><u>Not working?</u></string>
    <string name="info">Info</string>
    <string name="delete">Uninstall</string>
    <string name="text_size">Text size</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="please_turn_on_double_tap_to_unlock">Please turn on double tap to lock</string>
    <string name="launcher_failed_to_lock_device">Husk failed to lock device.\nPlease check your app settings.</string>
    <string name="long_press_to_select_app">Long press to select app</string>
    <string name="unable_to_open_app">Unable to open app</string>
    <string name="unable_to_open_app_info">Unable to open app info</string>
    <string name="copied">Copied</string>
    <string name="system_app_cannot_delete">System app, cannot delete</string>
    <string name="type_a_new_app_name_first">Type a new app name first</string>
    <string name="app_not_found">App not found</string>
    <string name="dial">Dial</string>
    <string name="action_call">Call</string>
    <string name="call_number">Call %1$s</string>
    <string name="alarm_at">alarm %1$s</string>
    <string name="search_online">Search online</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="orientation">Orientation</string>
    <string name="quotes">Quotes</string>
    <string name="quote_line">Quote on home</string>
    <string name="auto">Auto</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="sleep_timer_on">Stopping in %1$d min</string>
    <string name="sleep_timer_off">Sleep timer off</string>
    <string name="action_whatsapp">WhatsApp</string>
    <string name="action_sms">SMS</string>
    <string name="no_whatsapp_for_contact">No WhatsApp for this number</string>
    <string name="contacts_permission_needed">Contacts permission is needed to dial</string>
    <string name="add_contact_plus" translatable="false">+</string>
    <string name="type_a_number_to_add">Type a number to add</string>
    <string name="recent">Recent</string>
    <string name="contacts">Contacts</string>
    <string name="all_apps">All apps</string>
    <string name="media_previous">Previous track</string>
    <string name="media_play">Play or pause</string>
    <string name="media_next">Next track</string>
    <string name="shuffling_all">Shuffling all</string>
    <string name="unable_to_launch_app">Unable to launch app</string>
    <string name="search_for_Launcher_or_home_app">Search for Launcher or Home app</string>
    <string name="swipe_left_app_enabled">Swipe left app enabled</string>
    <string name="swipe_right_app_enabled">Swipe right app enabled</string>
    <string name="swipe_left_app_disabled">Swipe left app disabled</string>
    <string name="swipe_right_app_disabled">Swipe right app disabled</string>
    <string name="husk_is_not_default_launcher">Husk is not default. Wallpaper update will fail.</string>
    <string name="long_press_to_enable">Long press to enable</string>
    <string name="no_hidden_apps">No hidden apps</string>
    <string name="hidden_apps">Hidden apps</string>
    <string name="block_internet">Block internet</string>
    <string name="blocked_apps_count">%d blocked</string>
    <string name="blocked">Blocked</string>
    <string name="blocked_apps_sign" translatable="false">%d OFF</string>
    <string name="internet_blocked">%s blocked</string>
    <string name="internet_unblocked">%s unblocked</string>
    <string name="vpn_permission_needed">Permission needed to block apps</string>
    <string name="adapter_show">Show</string>
    <string name="adapter_hide">Hide</string>
    <string name="about_husk">About and FAQs</string>
    <string name="screen_time">Screen time</string>
    <string name="learn_more">Learn more</string>
    <string name="alignment_changed">Alignment changed ✅</string>
    <string name="home_screen">Home screen</string>
    <string name="hey">Hey</string>
    <string name="new_year_wish">Here\'s to a year better than any before. Happy new year!</string>
    <string name="new_year_wish_1">It doesn\'t matter how January went. You still have the rest of the year to do better than ever.</string>
    <string name="cheers">Cheers!</string>
    <string name="notification_bar">Notification bar</string>
    <string name="share">Share</string>
    <string name="seek_back" translatable="false">-10s</string>
    <string name="seek_forward" translatable="false">+10s</string>
    <string name="delete_recording">Delete</string>
</resources>